# mcp_streamlit

./: .gitignore  CHANGELOG.md  LICENSE  PRE_LAUNCH_CHECKLIST.md  QUICKSTART.md  README.md  TEST_REORGANIZATION.md  WORKFLOW_UPDATE.md  activate.sh  pyproject.toml  setup.sh
examples/: README.md  claude_code_config.json  dashboard_example.py  simple_app.py
plans/: full_plan.md  page_analytics.md  page_dashboard.md  page_home.md  page_test_page.md
streamlit_mcp/: server.py
streamlit_mcp/resources/: docs_overview.md
streamlit_mcp/resources/guides/: app_testing_guide.md  best_practices.md  cache_data_guide.md  cache_resource_guide.md  caching_deep_dive.md  execution_model.md
streamlit_mcp/resources/snippets/: caching_snippets.json  data_loading_snippets.json  navigation_snippets.json  session_state_snippets.json  testing_snippets.json
streamlit_mcp/templates/: dashboard_cached.py
streamlit_mcp/templates/multipage_modern/: README.md  app.py
streamlit_mcp/templates/multipage_modern/pages_lib/: data_analysis.py  home.py  (+2 more)
streamlit_mcp/tools/: app_planner.py  concepts.py  drawing_interpreter.py  orchestrator.py  planner.py  resources.py  testing.py  validator.py
streamlit_mcp/tools/display/: charts.py  chat.py  data.py  layout.py  media.py  status.py  text.py  widgets.py
streamlit_mcp/tools/logic/: __init__.py  auth.py  connections.py  execution.py  navigation.py  state.py
streamlit_mcp/utils/: codegen.py  schemas.py  vision_helpers.py
tests/: __init__.py  conftest.py  test_drawing_tool.py  test_integration.py  test_security_fixes.py  test_server.py
