[project]
name = "streamlit-mcp-server"
version = "0.1.0"
description = "A comprehensive MCP server for building Streamlit applications"
authors = [
    {name = "Streamlit MCP", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.0.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    "altair>=5.0.0",
    "bokeh>=3.3.0",
    "matplotlib>=3.7.0",
    "pydeck>=0.8.0",
    "graphviz>=0.20.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_mcp"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
streamlit-mcp = "streamlit_mcp.server:run"
